# shgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.shci/: linux-log.md  windows-log.md
.shci/linux/: build-output.txt  build.sh  info.txt  log.md  prerequisites-output.txt
.shci/windows/: build-output.txt  build.bat  info.txt  log.md  prerequisites-output.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  shgui-docs.cmake
docs/src/: demo.md
fonts/include/fonts/: consolas.h
resources/fonts/include/fonts/: consolas.h
resources/fonts/include/fonts/consolle/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
shaders/: export-shaders.c
shaders/include/shgui/: shgui-shaders.h  shguiShaders.h
shaders/src/: export-shaders.c  shgui-item.vert  shgui-region.frag  shgui-region.vert  shgui-text.frag  shgui-text.vert
shgui/: shgui.cmake
shgui-app/: shgui-app.cmake
shgui-app/include/shgui-app/: shgui-app.h
shgui-app/src/: shgui-app.c
shgui-example/: shgui-example.cmake
shgui-example/src/: shgui-example.c
shgui-shaders/: shgui-export-shaders.cmake  shgui-shaders.cmake
shgui-shaders/include/shgui-shaders/: shguiShaders.h
shgui-shaders/src/: export-shaders.c  shgui-char.frag  shgui-char.vert  shgui-region.vert
shgui/include/shgui/: shgui-assert.h  shgui-call.h  shgui-font.h  shgui.h
shgui/src/: shgui-font.c  shgui.c
